# rvllm

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  multi_gpu_optimization.txt  status.md  x-post.txt
.github/: FUNDING.yml
bench/: run.sh  video_demo.sh
bench/video/: README.md
chat-client/src/: api.rs
crates/rtriton/: README.md
crates/rvllm-api/: Cargo.toml
crates/rvllm-api/src/: error.rs  lib.rs  server.rs
crates/rvllm-api/src/routes/: batch.rs  chat.rs  completions.rs  embeddings.rs  mod.rs  responses.rs  tools.rs
crates/rvllm-api/src/types/: mod.rs  request.rs  response.rs  responses.rs  streaming.rs
crates/rvllm-attention/src/: backend.rs  flash_attention.rs  flash_attention_impl.rs  mock.rs  paged_attention.rs  paged_attention_cuda.rs
crates/rvllm-engine/: Cargo.toml
crates/rvllm-engine/src/: async_engine.rs  async_gpu_engine.rs  beam_search.rs  engine.rs  gpu_engine.rs  gpu_metrics.rs  hf_snapshot.rs  lib.rs  output.rs  stop_checker.rs
crates/rvllm-fusion/: Cargo.toml  README.md
crates/rvllm-fusion/src/: dispatch.rs  jit.rs  lib.rs  verify.rs
crates/rvllm-gpu/: Cargo.toml  build.rs
crates/rvllm-gpu/src/: buffer.rs  cublas.rs  cublaslt_ops.rs  cublaslt_raw.rs  cuda_allocator.rs  cuda_graph.rs  cutlass_autotune.rs  cutlass_ffi.rs  device.rs  fa3_ffi.rs  fp8_quantize.rs  kernel_loader.rs  lib.rs  nccl.rs  persistent_v2_ffi.rs  pinned_memory.rs  stream.rs
crates/rvllm-kv-cache/: Cargo.toml
crates/rvllm-kv-cache/src/: engine.rs  engine_cuda.rs  fp8_cache.rs  lib.rs  ops.rs  ops_cuda.rs
crates/rvllm-model-loader/: Cargo.toml
crates/rvllm-model-loader/src/: dtype.rs  gguf.rs  gpu_loader.rs  gpu_weights.rs  lib.rs  safetensors.rs  shard.rs
crates/rvllm-model-runner/: Cargo.toml  README.md
crates/rvllm-model-runner/src/: bridge.rs  gpu_layer.rs  gpu_runner.rs  lib.rs  megakernel.rs  runner.rs
crates/rvllm-model-runner/src/architectures/: cohere.rs  deepseek.rs  embedding.rs  gemma.rs  gpt_neox.rs  llama.rs  mistral.rs  mixtral.rs  mod.rs  nemotron_h_moe.rs  phi.rs  qwen2.rs
crates/rvllm-model-runner/src/gpu_layer/: batched.rs  decode.rs  mod.rs
crates/rvllm-model-runner/src/layers/: activation.rs  activation_cuda.rs  fused_ops.rs  linear_cuda.rs  mod.rs  moe.rs  norm.rs  norm_cuda.rs  rotary.rs  rotary_cuda.rs  softmax_cuda.rs
crates/rvllm-server/: Cargo.toml
crates/rvllm-server/src/: main.rs
crates/rvllm-server/tests/: e2e_test.rs
crates/rvllm-tokenizer/: Cargo.toml
crates/rvllm-tokenizer/src/: chat.rs  incremental.rs  lib.rs  tokenizer.rs  tool_parser.rs
crates/rvllm-worker/: Cargo.toml
crates/rvllm-worker/src/: gpu_worker.rs  graph_runner.rs  input.rs  lib.rs  metrics.rs  worker.rs
crates/rvllm-xla/: Cargo.toml
crates/rvllm-xla/src/: artifact.rs  client.rs  ffi.rs  gemma4_weights.rs  kv_cache.rs  lib.rs  mesh.rs  rope.rs
deploy/: benchmark_client.py  deploy_and_bench.sh  download_kernels_hf.sh  rsync_and_run.sh  upload_kernels_hf.sh  vastai-benchmark.sh  vastai-deploy.sh  vastai-provision.sh  vllm_direct_bench.py
deploy/cf-worker/: build.sh
docs/: bench.html  benchmark-history.md  index.html  profiling.md  update-log.md
docs/delegation/: pages-polish.md  paper-compile.md  video-tool.md
docs/paper/: references.bib  rvllm-body.tex  rvllm-bw.tex  rvllm-dark.tex  rvllm.tex
kernels/: activation.cu  add_bias.cu  argmax.cu  build_cutlass_so.sh  build_fa3.sh  copy_blocks.cu  cutlass_fp8_gemm.cu  cutlass_fp8_gemm_autotune.cu  cutlass_gateup_silu.cu  cutlass_qkv_bias.cu  cutlass_w4a8_wrapper.cu  embedding_gather.cu  fa3_sm90_wrapper.cu  flash_attention.cu  flash_attention_3.cu  flash_attention_3_v3.cu  fused_add_norm_gateup_gemv.cu  fused_add_norm_qkv_gemv.cu  fused_lm_head_argmax.cu  fused_lm_head_argmax_f16.cu  fused_norm_gemv.cu  fused_oproj_add_norm_gateup_gemv.cu  fused_residual_rmsnorm.cu  fused_rmsnorm_fp8_quant.cu  fused_rope_cache.cu  fused_silu_down.cu  fused_silu_down_gemv.cu  fused_silu_fp8_quant.cu  fused_silu_fp8_quant_v2.cu  gemv_f16.cu  gemv_fp8.cu  gemv_int4.cu  megakernel_decode.cu  paged_attention.cu  persistent_gemm.cu  persistent_layer_decode.cu  persistent_layer_v3.cu  qkv_transpose.cu  reshape_and_cache.cu  reshape_and_cache_f16.cu  (+10 more)
reports/full_stack_compare_20260407/: make_flagged_flamegraph.py  rvllm_n64_flame.json
scripts/: deploy_and_autotune.sh  gemma4_hf_probes.py  hf_attn_probes.py  hf_dump_intermediates.py  profile_compare.sh  render_profile_compare.py
tests/api_compat/: test_openai_client.py
tpu/: Makefile  README.md  manifest.toml  pyproject.toml
tpu/harness/: api_server.py  bench_driver.py  bench_flax.py  bench_h100_vllm.sh  bench_ppl.py  bench_tpu_direct.py  bench_vllm_tpu.sh  deploy_to_tpu.sh  gemma4_export.py  gemma4_tpu_infer.py  gen_compile_options.py  pallas_kv_update.py  run_fp8_all.sh  verify_all.py
tpu/ports/: attention.py  gemm.py  megakernel.py
v3/: Cargo.toml
v3/crates/rvllm-attention/src/: decode.rs  lib.rs  prefill.rs
v3/crates/rvllm-bench/: Cargo.toml
v3/crates/rvllm-bench/src/: main.rs
v3/crates/rvllm-core/src/: error.rs
v3/crates/rvllm-cutlass/src/: cublaslt.rs  lib.rs  lib_so.rs  plan.rs  policy.rs  variants.rs  w4a8.rs
v3/crates/rvllm-fused/src/: gemma4_launcher.rs  launcher.rs  lib.rs
v3/crates/rvllm-graph/: Cargo.toml
v3/crates/rvllm-graph/src/: pool.rs
v3/crates/rvllm-kernels/src/: loader.rs  manifest.rs
v3/crates/rvllm-loader/: Cargo.toml
v3/crates/rvllm-loader/src/: fp8_quant.rs  gemma4_load.rs  gemma4_weights.rs  lib.rs  load.rs  load_multiformat.rs  safetensors.rs  weights.rs
v3/crates/rvllm-mem/src/: hbm.rs  pinned.rs
v3/crates/rvllm-runtime/: Cargo.toml
v3/crates/rvllm-runtime/src/: bring_up.rs  gemma4_bring_up.rs  gemma4_layer_exec.rs  layer_exec.rs  lib.rs
v3/crates/rvllm-sampling/: Cargo.toml
v3/crates/rvllm-sampling/src/: dtoh.rs  lib.rs  params.rs
v3/kernels/: compute_qkv_scales.cu  f32_to_f16_sat.cu  fused_gelu_mul_fp8_quant.cu  fused_norm_add_residual.cu  fused_qkv_rmsnorm.cu  fused_rope_partial_fp8kv.cu  make_manifest.py  make_policy.py  scale_cols_f32.cu  sweep_variants.sh
(+59 files in other folders)
