[workspace]
resolver = "2"
members = [
    "crates/rvllm-core",
    "crates/rvllm-mem",
    "crates/rvllm-kernels",
    "crates/rvllm-cutlass",
    "crates/rvllm-attention",
    "crates/rvllm-fused",
    "crates/rvllm-metadata",
    "crates/rvllm-graph",
    "crates/rvllm-loader",
    "crates/rvllm-sampling",
    "crates/rvllm-runtime",
    "crates/rvllm-serve",
    "crates/rvllm-bench",
    "crates/rvllm-deploy",
    "crates/rvllm-invariants",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
authors = ["m0at <47344131+m0at@users.noreply.github.com>"]
repository = "https://github.com/m0at/rvllm"

[workspace.dependencies]
rvllm-core      = { path = "crates/rvllm-core" }
rvllm-mem       = { path = "crates/rvllm-mem" }
rvllm-kernels   = { path = "crates/rvllm-kernels" }
rvllm-cutlass   = { path = "crates/rvllm-cutlass" }
rvllm-attention = { path = "crates/rvllm-attention" }
rvllm-fused     = { path = "crates/rvllm-fused" }
rvllm-metadata  = { path = "crates/rvllm-metadata" }
rvllm-graph     = { path = "crates/rvllm-graph" }
rvllm-loader    = { path = "crates/rvllm-loader" }
rvllm-sampling  = { path = "crates/rvllm-sampling" }
rvllm-runtime   = { path = "crates/rvllm-runtime" }

half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 1
strip = "none"

[profile.dev]
opt-level = 1
