[package]
name = "rvllm-kv-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "KV-cache management for the rvLLM inference engine"
keywords = ["llm", "inference", "kv-cache", "attention", "vllm"]
categories = ["caching", "science"]

[features]
default = []
cuda = ["rvllm-gpu/cuda", "dep:cudarc"]

[dependencies]
rvllm-core.workspace = true
rvllm-gpu.workspace = true
thiserror.workspace = true
half.workspace = true
bytemuck.workspace = true
tracing.workspace = true
cudarc = { version = "0.12", features = ["driver"], optional = true }
