[package]
name = "rvllm-xla"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "XLA/TPU backend for the rvLLM inference engine"
keywords = ["llm", "inference", "tpu", "xla", "stablehlo"]
categories = ["hardware-support", "science"]

[features]
default = []
# Links against libtpu.so at runtime via dlopen. Requires libtpu on the
# target machine (Cloud TPU VM or GKE TPU node).
tpu = ["dep:libloading"]

[dependencies]
rvllm-core.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
tracing.workspace = true
half.workspace = true
libloading = { version = "0.8", optional = true }
clap.workspace = true
rand.workspace = true
serde_json.workspace = true
memmap2 = "0.9"

[[bin]]
name = "bench-pjrt"
path = "src/bin/bench_pjrt.rs"
required-features = ["tpu"]

[[bin]]
name = "infer-tpu"
path = "src/bin/infer_tpu.rs"
required-features = ["tpu"]

[[bin]]
name = "infer-gemma4-tpu"
path = "src/bin/infer_gemma4_tpu.rs"
required-features = ["tpu"]
