[package]
name = "rvllm-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# rvllm-bench: deterministic prompts, per-bucket tok/s + p50/p99 latency,
# JSON output consumed by tools/bench-gate. See v3/specs/{15,16}.md.

[[bin]]
name = "rvllm-bench"
path = "src/main.rs"

[[bin]]
name = "rvllm-eval"
path = "src/bin/rvllm_eval.rs"

[[bin]]
name = "rvllm-ppl"
path = "src/bin/rvllm_ppl.rs"

[features]
default = []
cuda = ["rvllm-runtime/cuda", "rvllm-fused/cuda", "rvllm-mem/cuda", "dep:cudarc"]

[dependencies]
rvllm-core = { workspace = true }
rvllm-runtime = { workspace = true }
rvllm-fused = { workspace = true }
rvllm-mem = { workspace = true }
rvllm-kernels = { workspace = true }
rvllm-cutlass = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = "0.20"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cudarc = { version = "0.19", features = ["driver", "cuda-version-from-build-system"], optional = true }
