[package]
name = "rvllm-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

# rvllm-runtime: Engine (type-state step_launch/step_collect),
# scheduler (Request state machine, BatchPlan), layer_exec (pure fn).
# See v3/specs/07-scheduler.md + 09-layer.md.

[features]
default = []
cuda = [
    "rvllm-mem/cuda",
    "rvllm-cutlass/cuda",
    "rvllm-attention/cuda",
    "rvllm-fused/cuda",
    "rvllm-metadata/cuda",
    "rvllm-graph/cuda",
    "rvllm-sampling/cuda",
    "dep:cudarc",
]

[dependencies]
rvllm-core = { workspace = true }
rvllm-mem = { workspace = true }
rvllm-kernels = { workspace = true }
rvllm-cutlass = { workspace = true }
rvllm-attention = { workspace = true }
rvllm-fused = { workspace = true }
rvllm-metadata = { workspace = true }
rvllm-graph = { workspace = true }
rvllm-loader = { workspace = true }
rvllm-sampling = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
cudarc = { version = "0.19", features = ["driver", "cuda-version-from-build-system"], optional = true }
